--- a/parkwhere-app/package.json
+++ b/parkwhere-app/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.5",
     "dotenv": "^16.3.1",
+    "google-map-react": "^2.2.1",
     "joi": "^17.11.0",
     "joi-browser": "^13.4.0",
+    "proj4": "^2.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
