--- a/parkwhere-app/package.json
+++ b/parkwhere-app/package.json
@@ -1,6 +1,7 @@
 {
   "name": "parkwhere-app",
   "version": "0.1.0",
+  "homepage": "https://nhkhai.github.io/ParkWhere",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -22,6 +23,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -43,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
