--- a/parkwhere-app/package.json
+++ b/parkwhere-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "parkwhere-app",
   "version": "0.1.0",
-  "homepage": "/ParkWhere/#",
+  "homepage": "https://nhkhai.github.io/ParkWhere",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -23,8 +23,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
